--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -39,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('data/train.csv')\n",
-    "df_test = pd.read_csv('data/test.csv')"
+    "df_train = pd.read_csv('train.csv')\n",
+    "df_test = pd.read_csv('test.csv')"
    ]
   },
   {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,6 +504,422 @@
     "df_train.to_csv('preprocessed_data/train_cleaned.csv', index=False)\n",
     "df_test.to_csv('preprocessed_data/test_cleaned.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5 NLP Technique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "import string\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "punc = list(string.punctuation)\n",
+    "stop_word = stopwords.words('english')\n",
+    "lemma = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying lemmatization\n",
+    "   meeting    --->   meet               \n",
+    "   was        --->    be                \n",
+    "   mice       --->   mouse  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessing(data):\n",
+    "    data = re.sub('[^a-zA-Z]', ' ', data)\n",
+    "    data = data.lower()\n",
+    "    data = data.split()\n",
+    "    \n",
+    "\n",
+    "    data = ' '.join([lemma.lemmatize(word) for word in data if (word not in punc) or (word not in stop_word)])\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train['Final_text'] = df_train['text'].apply(preprocessing)\n",
+    "df_test['Final_text'] = df_test['text'].apply(preprocessing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        what will the world be like post donald trump ...\n",
+       "1        the police shooting of black teen michael brow...\n",
+       "2        the six month since president donald trump wa ...\n",
+       "3        last friday new jersey governor chris christie...\n",
+       "4        the incredibly talented voice actor billy west...\n",
+       "                               ...                        \n",
+       "40422    new york reuters a u s judge will hear argumen...\n",
+       "40423    washington reuters a u s district court judge ...\n",
+       "40424    new york reuters a u s judge said he will inqu...\n",
+       "40425    san diego reuters u s district judge gonzalo c...\n",
+       "40426    new york reuters a u s judge on tuesday direct...\n",
+       "Name: Final_text, Length: 40414, dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train['Final_text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>class</th>\n",
+       "      <th>Final_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>#AfterTrumpImplodes Hashtag Hilariously Imagi...</td>\n",
+       "      <td>What will the world be like post-Donald Trump?...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>what will the world be like post donald trump ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>#BlackLivesMatter Leader To Run For Mayor Of ...</td>\n",
+       "      <td>The police shooting of black teen Michael Brow...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>the police shooting of black teen michael brow...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>#BringBackObama Hashtag Blows Up On Twitter A...</td>\n",
+       "      <td>The six months since President Donald Trump wa...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>the six month since president donald trump wa ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>#FreeChrisChristie: Twitter Reacts To The ‘Ho...</td>\n",
+       "      <td>Last Friday, New Jersey Governor Chris Christi...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>last friday new jersey governor chris christie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>#MakeAmericaBrannigan: Futurama Voice Actor R...</td>\n",
+       "      <td>The incredibly talented voice actor, Billy Wes...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>the incredibly talented voice actor billy west...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID                                              title  \\\n",
+       "0   0   #AfterTrumpImplodes Hashtag Hilariously Imagi...   \n",
+       "1   1   #BlackLivesMatter Leader To Run For Mayor Of ...   \n",
+       "2   2   #BringBackObama Hashtag Blows Up On Twitter A...   \n",
+       "3   3   #FreeChrisChristie: Twitter Reacts To The ‘Ho...   \n",
+       "4   4   #MakeAmericaBrannigan: Futurama Voice Actor R...   \n",
+       "\n",
+       "                                                text subject  class  \\\n",
+       "0  What will the world be like post-Donald Trump?...    News    0.0   \n",
+       "1  The police shooting of black teen Michael Brow...    News    0.0   \n",
+       "2  The six months since President Donald Trump wa...    News    0.0   \n",
+       "3  Last Friday, New Jersey Governor Chris Christi...    News    0.0   \n",
+       "4  The incredibly talented voice actor, Billy Wes...    News    0.0   \n",
+       "\n",
+       "                                          Final_text  \n",
+       "0  what will the world be like post donald trump ...  \n",
+       "1  the police shooting of black teen michael brow...  \n",
+       "2  the six month since president donald trump wa ...  \n",
+       "3  last friday new jersey governor chris christie...  \n",
+       "4  the incredibly talented voice actor billy west...  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### separating the features (Text) and (class)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>Final_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>what will the world be like post donald trump ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>the police shooting of black teen michael brow...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>the six month since president donald trump wa ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   class                                         Final_text\n",
+       "0    0.0  what will the world be like post donald trump ...\n",
+       "1    0.0  the police shooting of black teen michael brow...\n",
+       "2    0.0  the six month since president donald trump wa ..."
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def drop_col(data):\n",
+    "    data = data.drop(columns=['ID', 'subject', 'title', 'text'], axis=1)\n",
+    "    data = data.dropna()\n",
+    "    return data\n",
+    "\n",
+    "df_train = drop_col(df_train)\n",
+    "df_test = drop_col(df_test)\n",
+    "\n",
+    "df_train.head(3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Final_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>new york reuters a u s judge on thursday repea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>greenbelt md reuters a u s judge on monday que...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>san francisco reuters a u s judge on monday ap...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Final_text\n",
+       "0  new york reuters a u s judge on thursday repea...\n",
+       "1  greenbelt md reuters a u s judge on monday que...\n",
+       "2  san francisco reuters a u s judge on monday ap..."
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_train['Final_text'].values\n",
+    "y = df_train['class'].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Converting Text Data to Numerical Representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40414, 9000)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer(max_features=9000)\n",
+    "vectorizer.fit(X)\n",
+    "\n",
+    "X = vectorizer.transform(X)\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -522,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
